# OmniVideoBench

./: .gitignore  README.md  dataloader.py
data_example/: data.json  example_data.json
envs/: environment_baichuan.yml  environment_ming.yml  environment_ola.yml  environment_qwen3omni.yml  environment_qwenomni.yml
eval/: baichuan_omni_eval.py  baichuan_omni_eval.sh  gemini_eval.py  humanomni_eval.py  humanomni_v2_eval.py  internvl_eval.py  ming_omni_eval.py  minicpm-o_eval.1.py  minicpm-o_eval.py  qwen3_omni_eval.py  qwen3_omni_eval_open.py  qwen3_omni_eval_thinking.py  qwenomni_eval.py  qwenomni_eval_open_ended.py  qwenvl_eval.py  qwenvl_eval_asr.py  videollama2_eval.py
model/: internvl_eval.sh  minicpm-o_eval.1.py  qwen3_omni_eval.py  qwen3_omni_eval_open.py  qwen3_omni_eval_thinking.py  qwenomni_eval_open_ended.py  rjob-minicpmo.sh
model/HumanOmni/: main.py  pyproject.toml  requirements.txt
model/HumanOmni/humanomni/: __init__.py
model/HumanOmni/humanomni/model/: __init__.py
utils/: dist_utils.py  ds_utils.py  format_json.py  select_single_modality.py  utils.py  vision_process.py  vl_vision_process.py
