[project]
name = "humanomni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.30.1",
    "bitsandbytes==0.43.1",
    "decord==0.6.0",
    "deepspeed>=0.14.0",
    "einops==0.6.1",
    "fastapi>=0.116.1",
    "h5py>=3.14.0",
    "imageio==2.34.2",
    "imageio-ffmpeg==0.6.0",
    "ipdb>=0.13.13",
    "librosa>=0.10.0",
    "moviepy==1.0.3",
    "numpy==1.22.2",
    "openai>=1.99.9",
    "opencv-python==4.6.0.66",
    "peft==0.11.0",
    "pydantic==1.10.7",
    "pysubs2>=1.8.0",
    "requests>=2.32.4",
    "scenedetect==0.6.3",
    "scikit-learn==1.3.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "timm==1.0.3",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "transformers==4.53.2",
    "uvicorn>=0.35.0",
    "wandb>=0.21.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
